--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
 </head>
 <body>
 
-  <auth-app>
+  <app>
     Loading...
-  </auth-app>
+  </app>
 
   <!-- Commmon files to be cached -->
   <script src="/build/common.js"></script>
