--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -1,9 +1,9 @@
 <div class="login jumbotron center-block">
 
-  <img src="/assets/img/logo-ucar.png"  width="210px" height="59px">
-  <img src="/assets/img/logo_ministerio2.png"  width="280px" height="80px">
+  <img src="../../assets/img/logo-ucar.png"  width="210px" height="59px">
+  <img src="../../assets/img/logo_ministerio2.png"  width="280px" height="80px">
 
-  <h1>Login</h1>
+  <h1>Login2</h1>
   <form role="form" (submit)="login($event, username.value, password.value)">
   <div class="form-group">
     <label for="username">Username</label>
