--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
   <link rel="stylesheet" type="text/css" href="/node_modules/bootstrap/dist/css/bootstrap.css">
   <!-- Util -->
   <script type="text/javascript" src="/node_modules/jwt-decode/build/jwt-decode.js"></script>
+
+  <script src="/node_modules/jquery/dist/jquery.min.js"></script>
 </head>
 <body>
 
