--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <!-- Util -->
   <script type="text/javascript" src="/node_modules/jwt-decode/build/jwt-decode.js"></script>
 
-  <script src="/node_modules/jquery/dist/jquery.min.js"></script>
+<!--  NO usar <script src="/node_modules/jquery/dist/jquery.min.js"></script> -->
 </head>
 <body>
 
